--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 langchain
 langchain-core
 langchain-community
-langchain-experimental
+langchain-experimental==0.3.4
 langchain-neo4j
 langchain-ollama
 neo4j
@@ -9,3 +9,4 @@ pandas
 numpy
 fastapi
 pymupdf
+langchain-graph-retriever==0.8.0
